Fix ie11 alignment bugs
- Fix titles not being aligned properly on ie11 due to flexbox bug
- Fix alignment of cover image text by reducing min-height of default to be less than what padding will do

--- a/sass/site/blocks/_core.scss
+++ b/sass/site/blocks/_core.scss
@@ -10,8 +10,10 @@
 }
 
 .wp-block-cover-image {
-	
+	min-height: 160px;
 	.wp-block-cover-image-text {
+		padding: 4rem 1rem;
+		padding: 8vw 1rem;
 		font-family: $font__heading;
 		font-weight: 600;
 	}
