--- a/style.css
+++ b/style.css
@@ -1209,9 +1209,6 @@ nav {
 
 .cover-header {
   color: white;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   display: grid;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
@@ -1293,9 +1290,13 @@ p.entry-excerpt {
 .has-white-color[class*="wp-block"] {
   color: #fff; }
 
-.wp-block-cover-image .wp-block-cover-image-text {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 600; }
+.wp-block-cover-image {
+  min-height: 160px; }
+  .wp-block-cover-image .wp-block-cover-image-text {
+    padding: 4rem 1rem;
+    padding: 8vw 1rem;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 600; }
 
 p.wp-block-subhead {
   font-size: 125%; }
